--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>凝生ningsheng</title>
-    <script>
+    <style>
+        html {
+
+font-size : 20px;
+
+
+
+}
+    </style>
+    <!-- <script>
         (function (doc, win) {
             var docEl = doc.documentElement,
                     resizeEvt = 'orientationchange' in window ? 'orientationchange' : 'resize',
@@ -28,7 +37,7 @@
             doc.addEventListener('DOMContentLoaded', recalc, false);
         })(document, window);
 
-    </script>
+    </script> -->
 </head>
 
 <body>
